; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/deadfs/extr_dead_vnops.c_dead_write.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/deadfs/extr_dead_vnops.c_dead_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_write_args = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"dead_write: lock\00", align 1
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dead_write(%struct.vnop_write_args* %0) #0 {
  %2 = alloca %struct.vnop_write_args*, align 8
  store %struct.vnop_write_args* %0, %struct.vnop_write_args** %2, align 8
  %3 = load %struct.vnop_write_args*, %struct.vnop_write_args** %2, align 8
  %4 = getelementptr inbounds %struct.vnop_write_args, %struct.vnop_write_args* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @chkvnlock(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @panic(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %1
  %11 = load i32, i32* @EIO, align 4
  ret i32 %11
}

declare dso_local i64 @chkvnlock(i32) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
